@@ -331,6 +331,7 @@ CREATE TABLE divisions (
 	regon		varchar(255)	NOT NULL DEFAULT '',
 	rbe			varchar(255)	NOT NULL DEFAULT '',
 	rbename		varchar(255)	NOT NULL DEFAULT '',
+	telecomnumber varchar(255)    NOT NULL DEFAULT '',
 	account         varchar(48) 	NOT NULL DEFAULT '',
 	inv_header      text    	NOT NULL DEFAULT '',
 	inv_footer      text    	NOT NULL DEFAULT '',
@@ -3260,4 +3261,4 @@ INSERT INTO netdevicemodels (name, alternative_name, netdeviceproducerid) VALUES
 ('XR7', 'XR7 MINI PCI PCBA', 2),
 ('XR9', 'MINI PCI 600MW 900MHZ', 2);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018012200');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2018020800');
