@@ -3,7 +3,7 @@
 /*
  *  LMS version 1.11-git
  *
- *  Copyright (C) 2001-2017 LMS Developers
+ *  Copyright (C) 2001-2018 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -34,4 +34,10 @@ interface LMSDivisionManagerInterface {
 	public function GetDivisionByName($name);
 
 	public function GetDivisions($params = array());
+
+	public function AddDivision($division);
+
+	public function DeleteDivision($id);
+
+	public function UpdateDivision($division);
 }
