@@ -3,7 +3,7 @@
 /*
  * LMS version 1.11-git
  *
- *  (C) Copyright 2001-2016 LMS Developers
+ *  (C) Copyright 2001-2018 LMS Developers
  *
  *  Please, see the doc/AUTHORS for more information about authors!
  *
@@ -105,38 +105,7 @@ if ( !empty($_POST['division']) ) {
 		$error['tax_office_code'] = trans('Invalid format of Tax Office Code!');
 
 	if (!$error) {
-		$LMS->UpdateAddress( $division );
-
-		$args = array(
-			'name'        => $division['name'],
-			'shortname'   => $division['shortname'],
-			'ten'         => $division['ten'],
-			'regon'       => $division['regon'],
-			'rbe'         => $division['rbe'] ? $division['rbe'] : '',
-			'rbename'     => $division['rbename'] ? $division['rbename'] : '',
-			'account'     => $division['account'],
-			'inv_header'  => $division['inv_header'],
-			'inv_footer'  => $division['inv_footer'],
-			'inv_author'  => $division['inv_author'],
-			'inv_cplace'  => $division['inv_cplace'],
-			'inv_paytime' => $division['inv_paytime'],
-			'inv_paytype' => $division['inv_paytype'] ? $division['inv_paytype'] : null,
-			'description' => $division['description'],
-			'status'      => !empty($division['status']) ? 1 : 0,
-			'tax_office_code' => $division['tax_office_code'],
-			SYSLOG::RES_DIV   => $division['id']
-		);
-
-		$DB->Execute('UPDATE divisions SET name=?, shortname=?,
-			ten=?, regon=?, rbe=?, rbename=?, account=?, inv_header=?,
-			inv_footer=?, inv_author=?, inv_cplace=?, inv_paytime=?,
-			inv_paytype=?, description=?, status=?, tax_office_code = ?
-			WHERE id=?', array_values($args));
-
-		$LMS->UpdateAddress($division);
-
-		if ($SYSLOG)
-			$SYSLOG->AddMessage(SYSLOG::RES_DIV, SYSLOG::OPER_UPDATE, $args);
+		$LMS->UpdateDivision($division);
 
 		$SESSION->redirect('?m=divisionlist');
 	}
