@@ -132,6 +132,17 @@
 	</TR>
 	<TR>
 		<TD>
+			<IMG src="img/phone.gif" alt="">
+		</TD>
+		<TD class="bold nobr">
+			{trans("Telecom number:")}
+		</TD>
+		<TD>
+			<INPUT type="text" value="{$division.telecomnumber}" name="division[telecomnumber]" size="30" {tip text="Enter Telecom Registry Number (optional)" trigger="telecomnumber"}>
+		</TD>
+	</TR>
+	<TR>
+		<TD>
 			<IMG src="img/card.gif" alt="">
 		</TD>
 		<TD class="bold nobr">
